--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-router-dom": "^4.3.1",
+    "antd": "^3.12.4",
+    "axios": "^0.18.0",
+    "@babel/polyfill": "^7.2.5",
+    "es6-promise": "^4.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
