--- a/package.json
+++ b/package.json
@@ -7,25 +7,23 @@
     "build": "cross-env NODE_PATH=src  react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  
   },
-
-
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "react-router-dom": "^4.3.1",
+    "@babel/polyfill": "^7.2.5",
     "antd": "^3.12.4",
     "axios": "^0.18.0",
-    "@babel/polyfill": "^7.2.5",
-    "react-app-polyfill": "^0.2.0",
     "es6-promise": "^4.2.5",
-    "react-media": "^1.9.2",
-    "lodash": "^4.17.11",
     "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.11",
+    "react": "^16.8.6",
+    "react-app-polyfill": "^0.2.0",
+    "react-countup": "^4.0.0",
+    "react-dom": "^16.8.6",
+    "react-media": "^1.9.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "3.0.1",
     "styled-components": "^4.1.3",
-    "react-countup": "^4.0.0"
+    "yarn": "^1.16.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0"
